# focal-agent-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml
src/: main.py
